# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  CLAUDE.md  README.md  SETUP.md  package-lock.json  temp_openapi.json
backend/: README.md  agent.py  api.py  check_embeddings.py  mcp-server.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  retrieve.py  run_agent.py  validate_retrieval.py
backend/.claude/: settings.local.json
backend/.specify/memory/: constitution.md
backend/docs/: edge_cases.md
backend/specs/005-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/src/: config.py  database.py  main.py  middleware.py
backend/src/api/: __init__.py  chat.py  ingestion.py  retrieval.py  sessions.py
backend/src/config/: settings.py
backend/src/core/: gemini.py  ingestion.py  retrieval.py  security.py  session.py
backend/src/database/: database.py  utils.py
backend/src/middleware/: __init__.py  auth.py  rate_limit.py  security.py
backend/src/models/: api_requests.py  chat.py  content.py  conversation.py  document_chunk.py  embedding.py  ingestion_job.py  session.py  source_metadata.py
backend/src/schemas/: content.py  session.py
backend/src/services/: base.py  chat.py  content_extractor.py  duplicate_detector.py  embedding.py  embedding_generator.py  gemini.py  ingestion.py  ingestion_service.py  ingestion_workflow.py  metrics_service.py  qdrant_retrieval_tool.py  retrieval.py  retrieval_service.py  storage.py  (+2 more)
backend/tests/: conftest.py  test_chat.py  test_ingestion.py  test_retrieval.py  test_sessions.py
(+133 files in other folders)
